--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-discord.py==1.5.0
-langdetect==1.0.8
-python-dotenv==0.14.0
-translators==4.7.4
+discord.py>=1.5.1
+langdetect>=1.0.8
+python-dotenv>=0.14.0
+translators>=4.7.4
